<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingRight="@dimen/padding_linear_layout"
    android:paddingLeft="@dimen/padding_linear_layout"
    android:paddingBottom="@dimen/padding_linear_layout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/series_label"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/series"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="4"
        android:inputType="number"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_label"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="6"
        android:inputType="number"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:onClick="nextCaptchaFragment"
        android:textColor="@color/manu_text"
        android:background="@drawable/button_next"
        android:textSize="@dimen/menu_text"
        android:layout_marginTop="@dimen/menu_btn_margin_top"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textColor="@color/manu_text"
        android:background="@drawable/button_clear"
        android:textSize="@dimen/menu_text"
        android:layout_marginTop="@dimen/menu_btn_margin_top"
        android:layout_gravity="center" />
</LinearLayout>
